deployments/kubernetes/casdoor/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: casdoor
  labels:
    app.kubernetes.io/name: casdoor
