deployments/kubernetes/casdoor/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: casdoor
spec:
  type: ClusterIP
  selector:
    app: casdoor
  ports:
    - name: http
      port: 8000
      targetPort: http
