deployments/kubernetes/casdoor/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: casdoor
  namespace: casdoor
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: casdoor.invalid
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: casdoor
                port:
                  name: http
